<resources>
    <string name="app_name">Guardians</string>
    <string name="title_activity_maps">Guardians</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_login">Guardians</string>

    // String login activity
    <string name="btnLogin">Login</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="forgot_password">Forgotten account?</string>
    <string name="register">Not a member ?</string>
    <string name="title_forgot_password">Find Your Account</string>
    <string name="message_forgot_password">Enter you Email</string>
    <string name="email_or_password_invalid">Error: Email or password is invalid!</string>
    <string name="email_invalid">Email is invalid!</string>
    <string name="send_email_success">Please check your email for a message</string>
    <string name="internet_error">Error: No internet connection!</string>
    <string name="email_null">Please enter your email.</string>
    <string name="password_null">Please enter your password.</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_register">Create your Account</string>

    // String Register activity
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_already">Already a member ?</string>
    <string name="first_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="match_password">Password doesn\'t match</string>
    <string name="show_password">Show password</string>

</resources>
