<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96000000"
    android:padding="15sp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dell.myapplication.Register"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/tw_title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtMessage_register"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_below="@+id/tw_title_register"
        android:textColor="#fd0000"
        android:textSize="22sp" />

    <ScrollView
        android:id="@+id/scllay_register_regisInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtMessage_register">

        <RelativeLayout
            android:id="@+id/registerinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp">

            <LinearLayout
                android:id="@+id/linlay_register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="@drawable/edt_layout_background">

                <EditText
                    android:id="@+id/edtFirstName_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/edt_background"
                    android:hint="@string/first_name"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay_register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linlay_register_firstname"
                android:layout_margin="5sp"
                android:background="@drawable/edt_layout_background">

                <EditText
                    android:id="@+id/edtLastName_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/edt_background"
                    android:hint="@string/Last_name"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linlay_register_lastname"
                android:layout_margin="5sp"
                android:background="@drawable/edt_layout_background">

                <EditText
                    android:id="@+id/edtPhoneNumber_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/edt_background"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linLay_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay_register_phone"
                android:layout_margin="5sp"
                android:background="@drawable/edt_layout_background">

                <EditText
                    android:id="@+id/edtEmail_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/edt_background"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linLay_register_email"
                android:layout_margin="5sp"
                android:background="@drawable/edt_layout_background">

                <EditText
                    android:id="@+id/edtPassword_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/edt_background"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay_register_confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linlay_register_password"
                android:layout_margin="5sp"
                android:background="@drawable/edt_layout_background">

                <EditText
                    android:id="@+id/edtConfirmPassword_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkb_register_showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linlay_register_confirmpass"
                android:text="@string/show_password"
                android:textColor="@color/white"
                android:buttonTint="@color/green"/>


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtSignUp_register"
        android:gravity="center">

        <Button
            android:id="@+id/btnSignUp_register"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:padding="8sp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/green2"
            android:textSize="19sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtSignUp_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10sp"
        android:text="@string/sign_in_already"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>
